display hex codes for generated color

--- a/style.css
+++ b/style.css
@@ -25,8 +25,8 @@ button {
   margin-top: 15px;
   padding: 10px 20px;
   cursor: pointer;
-  background-color: #A52A2A;
-  color: #FFFDD0;
+  background-color: #b36c74ff;
+  color: #EFDFBB;
   border: none;
   border-radius: 5px;
 }
